# mcdonalds_order_bot

./: .gitignore  README.md
mcdonalds_order_bot/: Dockerfile  docker-compose.yml  pyproject.toml  run.sh
mcdonalds_order_bot/menu/: full_menu.yaml  menu_deals.yaml  menu_ingredients.yaml  menu_upsells.yaml  menu_virtual_items.yaml
mcdonalds_order_bot/src/: check.py  run.py  server.py
mcdonalds_order_bot/src/mcdonalds_order_bot/: __init__.py  ai_module.py  core.py  main.py  menu_builder.py  models.py  order_manager.py
mcdonalds_order_bot/src/mcdonalds_order_bot/templates/: index.html
mcdonalds_order_bot/src/static/: chat.js
