[project]
name = "mcdonalds-order-bot"
version = "0.1.0"
description = ""
authors = [
    {name = "Compi-craft",email = "ozarko.pn@ucu.edu.ua"}
]
readme = "README.md"
requires-python = ">=3.10,<4.0"
dependencies = [
    "pydantic (>=2.11.7,<3.0.0)",
    "openai (>=1.97.1,<2.0.0)",
    "python-dotenv (>=1.1.1,<2.0.0)",
    "instructor (>=1.10.0,<2.0.0)",
    "pyyaml (>=6.0.2,<7.0.0)",
    "fastapi (>=0.116.1,<0.117.0)",
    "uvicorn (>=0.35.0,<0.36.0)"
]

[tool.poetry]
packages = [{include = "mcdonalds_order_bot", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
